# transcoder

./: .gitignore  CMakeLists.txt  README.md  decoder.cpp  decoder.cu  encoder.cpp  main.cpp
ffmpeg/include/libavutil/: ffversion.h
ffmpeg/lib/: libswresample.so.4.12.100  libswscale.so.7.5.100
